# testcraft

./: .gitignore  .pre-commit-config.yaml  .testcraft-comprehensive.toml  .testcraft.toml  .testcraft_state.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  debug_exact_files.py  debug_full_pipeline.py  debug_generate_usecase.py  debug_real_pipeline.py  hello.py  imported_tasks.json  latest-plans.json  mypy-staged.ini  mypy_logs.txt  pyproject.toml  test-plans.json  test_parser.py
.artifacts/costs/: cost_entries.json  cost_limits.json
.cursor/commands/: test.md
.cursor/rules/: README.mdc  adapter-patterns.mdc  cli-patterns.mdc  configuration.mdc  cursor_rules.mdc  domain-modeling.mdc  llm-integration.mdc  python-style.mdc  testcraft-core.mdc  testing-patterns.mdc  ui-patterns.mdc  workflow-patterns.mdc
.github/workflows/: ci.yml
.taskmaster/: config.json  state.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  task_021.txt  task_022.txt  task_023.txt  task_024.txt  task_025.txt  task_026.txt  task_027.txt  task_028.txt  task_029.txt  task_030.txt  task_031.txt  task_032.txt  task_033.txt  task_034.txt  task_035.txt  task_036.txt  tasks.json
docs/: advanced-usage.md  architecture.md  best-practices-checklist.md  configuration.md  context_assembly_specification.md  enhanced_ui_system.md  minimal_ui_system.md  model-catalog-migration.md  models.md  monthly-model-review-checklist.md  pre_commit_setup.md  ui_transformation_complete.md
docs/refactor/: ADR-001-orchestrator-consolidation.md  README.md  (+17 more)
examples/: clean_demo.py  config_usage.py  enhanced_ui_demo.py  live_file_tracking_demo.py  minimal_ui_demo.py  rich_ui_demo.py  textual_demo.py  unified_llm_demo.py
prompt-regression-artifacts/: prompt-samples.json  regression-test-report.json  test-summary.txt
scripts/: ci_artifacts.py  doc_check.py  find_placeholders.py  prompt_regression_test.py  setup_pre_commit.py  size_gate.py  test_ci_pipeline.py
tests/: conftest.py  test_analyze_usecase.py  test_artifact_store.py  test_bootstrap_integration.py  test_bootstrap_runner.py  test_cli_models.py  test_config.py  test_config_init.py  test_context_adapters.py  test_context_assembler_import_integration.py  test_context_pack.py  test_coverage_adapters.py  test_coverage_integration.py  test_coverage_usecase.py  test_enhanced_annotation_system.py  test_enhanced_context_integration.py  test_enriched_context_integration.py  test_enrichment_detectors_standalone.py  test_evaluation_integration.py  test_failed_refinement_annotations.py  test_file_discovery.py  test_generate_usecase_contextpack_integration.py  test_generate_usecase_enrichment.py  test_generation_services.py  test_immediate_refinement.py  test_import_resolver.py  test_llm_adapters.py  test_llm_common.py  test_llm_pricing.py  test_llm_routing_stream.py  test_minimal_ui.py  test_model_catalog.py  test_module_path_derivation.py  test_packaging_detector.py  test_parser_adapters.py  test_phase4_refactor_validation.py  test_placeholder.py  test_pricing_module.py  test_pytest_refiner_integration.py  test_python_formatters.py  (+14 more)
(+271 files in other folders)
